--- a/planechase-backend/package.json
+++ b/planechase-backend/package.json
@@ -1,10 +1,10 @@
 {
   "name": "planechase-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend server for Planechase webb app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node index.js"
   },
   "keywords": [],
   "author": "",
